[package]
name = "better_input"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A crate that adds functions aimed to improve terminal input"
exclude = ["/target", "**/*.rs.bk", "/unused"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]